[package]
authors = ["Michael Johnson"]
categories = ["embedded", "hardware-support"]
description = "A controller library for PiBorg's PicoBorg Reverse motor driver board designed for use with the Raspberry Pi"
documentation = "https://docs.rs/picoborgrev"
keywords = ["embedded-hal", "robotics"]
license = "MIT OR Apache-2.0"
name = "picoborgrev"
readme = "README.md"
repository = "https://github.com/MJohnson459/picoborgrev"
version = "0.1.1"

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.2"

[badges]
travis-ci = { repository = "MJohnson459/picoborgrev" }
